嗯，我也不知道能不能行

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             font-size: 14px;
         }
     </style>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/regex/manifest.json">
 </head>
 <body>
     <div class="container">
@@ -124,6 +124,6 @@
             }
         });
     </script>
-    <script src="app.js"></script>
+    <script src="/regex/app.js"></script>
 </body>
 </html>
