尝试修复错误

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0000ff">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>连接正则转换</title>
@@ -82,7 +83,7 @@
         .checkbox-container label {
             font-size: 14px;
         }
-    </style>
+    </style> 
     <link rel="manifest" href="/regex/manifest.json">
 </head>
 <body>
