--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff" id="theme-color">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>连接正则转换</title>
@@ -124,6 +125,7 @@
             }
         });
     </script>
+    <script src="/regex/theme-color.js"></script>
     <script src="/regex/app.js"></script>
 </body>
 </html>
