--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             transition: background-color 0.3s;
         }
         input, textarea {
-            width: 100%;
+            width: calc(100% - 20px); /* Adjust width to account for padding */
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
