--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
 
 .copy-button {
     position: absolute;
-    bottom: 10px;
-    left: 10px;
-    padding: 5px 10px;
+    bottom: 20px;
+    right: 5px;
+    padding: 2px 6px;
+    width: 30px;
     background-color: #007aff;
     color: #ffffff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 6px;
     transition: background-color 0.3s;
 }
 
