--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="content" id="content">首页</div>
     <div class="tabbar">
         <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><i class="fas fa-home"></i><span>首页</span></a>
-        <a href="./regex.html" onclick="changeTab(event, '正则', 'regex.html')"><i class="fas fa-search"></i><span>正则</span></a>
+        <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><i class="fas fa-search"></i><span>正则</span></a>
         <a href="#" onclick="changeTab(event, '消息', 'messages.html')"><i class="fas fa-envelope"></i><span>消息</span></a>
         <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><i class="fas fa-bell"></i><span>通知</span></a>
         <a href="#" onclick="changeTab(event, '设置', 'settings.html')"><i class="fas fa-cog"></i><span>设置</span></a>
