--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@
 
     <script>
         function changeTab(event, tabName, url) {
-            event.preventDefault();
-            document.querySelectorAll('.tabbar a').forEach(a => a.classList.remove('active'));
-            event.currentTarget.classList.add('active');
-            document.getElementById('content').textContent = tabName;
+    event.preventDefault();
+    document.querySelectorAll('.tabbar a').forEach(a => a.classList.remove('active'));
+    event.currentTarget.classList.add('active');
+    document.getElementById('content').textContent = tabName;
 
-            if (url) {
-                document.getElementById('content').innerHTML = `<iframe src="" style="width:100%; height:100%; border:none;"></iframe>`;
-            }
-        }
+    if (url) {
+        document.getElementById('content').innerHTML = `<iframe src="${url}" style="width:100%; height:100%; border:none;"></iframe>`;
+    }
+}
+
     </script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
