--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             font-size: 24px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="./fonts/icofont.min.css">
+    <link rel="stylesheet" type="text/css" href="https://hmau-ac.github.io/regex/fonts/icofont.min.css">
 </head>
 <body>
     <div class="content" id="content">首页</div>
     <div class="tabbar">
-        <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><i class="icofont-duotone icofont-cogs"><span>首页</span></a>
+        <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><i class="icofont-duotone icofont-cogs"></i><span>首页</span></a>
         <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><i class="icofont-duotone icofont-compass"></i><span>正则</span></a>
         <a href="#" onclick="changeTab(event, '消息', 'messages.html')"><i class="icofont-duotone icofont-user-notes"></i><span>消息</span></a>
         <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><i class="fas fa-bell"></i><span>通知</span></a>
@@ -76,6 +76,5 @@
 }
 
     </script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 </html>
