--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff" id="theme-color">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>底部导航栏示例</title>
     <style>
         body {
@@ -45,23 +49,17 @@
             color: #000;
             border-top: 2px solid #000;
         }
-        .tabbar a i {
-            display: block;
-            margin: 0 auto 5px;
-            font-size: 24px;
-            color: inherit; /* 让图标颜色继承文字颜色 */
-        }
     </style>
-    <link rel="stylesheet" type="text/css" href="https://hmau-ac.github.io/regex/fonts/icofont.min.css">
+    <link rel="manifest" href="/regex/manifest.json">
 </head>
 <body>
     <div class="content" id="content">首页</div>
     <div class="tabbar">
-        <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><i class="icofont-duotone icofont-cogs"></i><span>首页</span></a>
-        <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><i class="icofont-duotone icofont-compass"></i><span>正则</span></a>
-        <a href="#" onclick="changeTab(event, '消息', 'messages.html')"><i class="icofont-duotone icofont-user-notes"></i><span>消息</span></a>
-        <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><i class="icofont-duotone icofont-bell"></i><span>通知</span></a>
-        <a href="#" onclick="changeTab(event, '设置', 'settings.html')"><i class="icofont-duotone icofont-cogs"></i><span>设置</span></a>
+        <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><span>首页</span></a>
+        <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><span>正则</span></a>
+        <a href="#" onclick="changeTab(event, '消息', 'messages.html')"><span>消息</span></a>
+        <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><span>通知</span></a>
+        <a href="#" onclick="changeTab(event, '设置', 'settings.html')"><span>设置</span></a>
     </div>
 
     <script>
@@ -76,5 +74,7 @@
             }
         }
     </script>
+    <script src="/regex/theme-color.js"></script>
+    <script src="/regex/app.js"></script>
 </body>
 </html>
