--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>底部导航栏示例</title>
+    <title>爱吃素的胖子</title>
     <style>
         body {
             margin: 0;
@@ -41,7 +41,7 @@
             padding: 5px 0;
             text-decoration: none;
             color: #333;
-            font-size: 16px;
+            font-size: 18px;
         }
         .tabbar a.active {
             border-top: 2px solid #000;
