--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#ffffff" id="theme-color">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>爱吃素的胖子</title>
     <style>
         body {
@@ -27,7 +27,7 @@
         }
         .tabbar {
             position: fixed;
-            bottom: 0px;
+            bottom: 0;
             width: 100%;
             background-color: #f8f8f8;
             display: flex;
@@ -106,7 +106,7 @@
             }
         });
     </script>
-    <script src="/regex/theme-color.js"></script>
-    <script src="/regex/app.js"></script>
+    <script async src="/regex/theme-color.js"></script>
+    <script defer src="/regex/app.js"></script>
 </body>
 </html>
