--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="tabbar" id="tabbar">
         <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><span>首页</span></a>
         <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><span>正则</span></a>
-        <a href="#" onclick="changeTab(event, '消息', 'messages.html')"><span>消息</span></a>
+        <a href="./yh.html" onclick="changeTab(event, '压缩', './yh.html')"><span>压缩</span></a>
         <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><span>通知</span></a>
         <a href="#" onclick="changeTab(event, '设置', 'settings.html')"><span>设置</span></a>
     </div>
