--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <link rel="manifest" href="/regex/manifest.json">
 </head>
 <body>
-    <div class="content" id="content">首页</div>
+    <div class="content" id="content">😄欢迎来到这里</div>
     <div class="tabbar" id="tabbar">
-        <a href="#" class="active" onclick="changeTab(event, '首页', 'home.html')"><span>首页</span></a>
+        <a href="./sc.html" class="active" onclick="changeTab(event, '搜索', './sc.html')"><span>搜索</span></a>
         <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><span>正则</span></a>
         <a href="./yh.html" onclick="changeTab(event, '压缩', './yh.html')"><span>压缩</span></a>
         <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><span>通知</span></a>
