--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ffffff" id="theme-color">
+    <meta name="theme-color" content="#f0f0f0" id="theme-color">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
@@ -15,7 +15,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background-color: #ffffff;
+            background-color: #f0f0f0;
             color: #000000;
         }
         .content {
