--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <a href="./regex.html" onclick="changeTab(event, '正则', './regex.html')"><span>正则</span></a>
         <a href="./yh.html" onclick="changeTab(event, '压缩', './yh.html')"><span>压缩</span></a>
         <a href="#" onclick="changeTab(event, '通知', 'notifications.html')"><span>通知</span></a>
-        <a href="#" onclick="changeTab(event, '设置', 'settings.html')"><span>设置</span></a>
+        <a href="./st.html" onclick="changeTab(event, '设置', './st.html')"><span>设置</span></a>
     </div>
 
     <script>
