--- a/regex.html
+++ b/regex.html
@@ -31,13 +31,13 @@
             margin-bottom: 5px;
         }
         .file-input {
-            width: calc(100% - 5px); /* 添加边距调整 */
+            width: calc(100% - 5px);
             padding: 5px;
             border: 1px solid #ddd;
             border-radius: 5px;
             margin-bottom: 5px;
             box-sizing: border-box;
-            font-size: 16px; /* 设置输入框字体大小 */
+            font-size: 16px;
         }
         .compress-btn, .download-btn {
             width: 100%;
@@ -77,19 +77,31 @@
             position: absolute;
             bottom: 14px;
             right: 9px;
-            width: 40px; /* 放大 1.5 倍 */
-            height: 16px; /* 放大 1.5 倍 */
-            padding: 3px 3px; /* 放大 1.5 倍 */
+            width: 40px;
+            height: 16px;
+            padding: 3px 3px;
             background-color: #007aff;
             color: #ffffff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 9px; /* 放大 1.5 倍 */
+            font-size: 9px;
             transition: background-color 0.3s;
         }
         .copy-button:hover {
             background-color: #005bb5;
+        }
+        .options {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 10px;
+        }
+        .option-label {
+            font-size: 14px;
+        }
+        .option-input {
+            margin-right: 5px;
         }
     </style>
 </head>
@@ -97,17 +109,15 @@
     <div class="content">
         <div class="block">
             <div class="section">
-                <div class="section-title">正则表达转换连接</div>
-                <input type="text" class="file-input" id="urlInput" placeholder="输入网址链接">
+                <div class="section-title">转正则表达式</div>
+                <textarea class="file-input" id="urlInput" rows="4" placeholder="输入一个或多个网址链接，每行一个"></textarea>
+                <div class="options">
+                    <label class="option-label"><input type="checkbox" id="ignorePath" class="option-input"> 域名</label>
+                    <label class="option-label"><input type="checkbox" id="ignoreParams" class="option-input"> 忽略参数</label>
+                </div>
                 <div class="textarea-container">
                     <textarea class="file-input" id="regexOutput" rows="4" placeholder="正则表达式链接"></textarea>
                     <button class="copy-button" onclick="copyToClipboard()">复制</button>
-                </div>
-                <div class="checkbox-container">
-                    <input type="checkbox" id="ignoreQueryParams">
-                    <label for="ignoreQueryParams">忽略查询参数</label>
-                    <input type="checkbox" id="matchDomain" style="margin-left: 20px;">
-                    <label for="matchDomain">匹配域名</label>
                 </div>
                 <button class="compress-btn" onclick="convertToRegex()">转换</button>
             </div>
@@ -115,24 +125,66 @@
     </div>
 
     <script>
-        function convertToRegex() {
-            let url = document.getElementById('urlInput').value;
-            const ignoreQueryParams = document.getElementById('ignoreQueryParams').checked;
-            const matchDomain = document.getElementById('matchDomain').checked;
+        function escapeRegex(string) {
+            return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&').replace(/\//g, '\\/');
+        }
 
-            try {
-                if (matchDomain) {
-                    const urlObj = new URL(url);
-                    url = urlObj.origin;
-                } else if (ignoreQueryParams) {
-                    url = url.split('?')[0];
+        function splitUrl(url, ignorePath, ignoreParams) {
+            let baseUrl = url;
+            if (ignorePath) {
+                const pathIndex = url.indexOf('/', url.indexOf('://') + 3);
+                if (pathIndex !== -1) {
+                    baseUrl = url.substring(0, pathIndex);
                 }
-
-                const regex = url.replace(/[.*+?^${}()|[\]\\]/g, '\\$&').replace(/\//g, '\\/');
-                document.getElementById('regexOutput').value = regex;
-            } catch (e) {
-                alert('请输入有效的网址链接');
+            } else if (ignoreParams) {
+                const paramsIndex = url.indexOf('?');
+                if (paramsIndex !== -1) {
+                    baseUrl = url.substring(0, paramsIndex);
+                }
             }
+            return baseUrl.split(/([/.?#=])/).filter(Boolean);
+        }
+
+        function groupUrls(urls, ignorePath, ignoreParams) {
+            const parts = urls.map(url => splitUrl(url, ignorePath, ignoreParams));
+            const maxLength = Math.max(...parts.map(p => p.length));
+
+            const grouped = [];
+            for (let i = 0; i < maxLength; i++) {
+                const segmentSet = new Set();
+                parts.forEach(part => {
+                    if (part[i]) {
+                        segmentSet.add(part[i]);
+                    }
+                });
+                grouped.push(segmentSet);
+            }
+
+            return grouped;
+        }
+
+        function convertToRegex() {
+            const urls = document.getElementById('urlInput').value.split('\n').map(url => url.trim()).filter(url => url);
+            const ignorePath = document.getElementById('ignorePath').checked;
+            const ignoreParams = document.getElementById('ignoreParams').checked;
+
+            if (urls.length === 0) {
+                alert('请输入至少一个网址链接');
+                return;
+            }
+
+            const grouped = groupUrls(urls, ignorePath, ignoreParams);
+
+            const regexParts = grouped.map(segmentSet => {
+                if (segmentSet.size === 1) {
+                    return escapeRegex([...segmentSet][0]);
+                } else {
+                    return `(?:${[...segmentSet].map(escapeRegex).join('|')})`;
+                }
+            });
+
+            const finalRegex = regexParts.join('');
+            document.getElementById('regexOutput').value = finalRegex;
         }
 
         function copyToClipboard() {
