--- a/regex.html
+++ b/regex.html
@@ -38,6 +38,8 @@
             margin-bottom: 5px;
             box-sizing: border-box;
             font-size: 16px;
+            background-color: #fff;
+            color: #000;
         }
         .compress-btn, .download-btn {
             width: 100%;
@@ -103,6 +105,47 @@
         .option-input {
             margin-right: 5px;
         }
+
+        body.dark-mode {
+            background-color: #121212;
+            color: #ffffff;
+        }
+
+        .header.dark-mode {
+            background-color: #1e1e1e;
+            border-bottom-color: #333;
+        }
+
+        .block.dark-mode {
+            background-color: #1e1e1e;
+            border-color: #333;
+        }
+
+        .output.dark-mode {
+            background-color: #333;
+        }
+
+        .file-input.dark-mode {
+            background-color: #333;
+            color: #ffffff;
+            border-color: #555;
+        }
+
+        .compress-btn.dark-mode, .download-btn.dark-mode {
+            background-color: #444;
+        }
+
+        .compress-btn.dark-mode:hover, .download-btn.dark-mode:hover {
+            background-color: #555;
+        }
+
+        .copy-button.dark-mode {
+            background-color: #555;
+        }
+
+        .copy-button.dark-mode:hover {
+            background-color: #666;
+        }
     </style>
 </head>
 <body>
@@ -123,6 +166,8 @@
             </div>
         </div>
     </div>
+
+    <button id="themeToggleBtn" style="position: fixed; bottom: 10px; left: 10px; padding: 10px; background-color: #007aff; color: white; border: none; border-radius: 5px; cursor: pointer;">切换主题</button>
 
     <script>
         function escapeRegex(string) {
@@ -199,6 +244,32 @@
                 copyButton.textContent = '复制';
             }, 1000);
         }
-    </script>
+
+        document.addEventListener('DOMContentLoaded', function () {
+            const themeToggleBtn = document.getElementById('themeToggleBtn');
+            const themeColorMeta = document.getElementById('theme-color');
+
+            // 检查系统的暗黑模式
+            if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.body.classList.add('dark-mode');
+                document.querySelectorAll('.header, .block, .output, .file-input, .compress-btn, .download-btn, .copy-button').forEach(element => {
+                    element.classList.add('dark-mode');
+                });
+                themeColorMeta.setAttribute('content', '#121212');
+            }
+
+            themeToggleBtn.addEventListener('click', function () {
+                document.body.classList.toggle('dark-mode');
+                document.querySelectorAll('.header, .block, .output, .file-input, .compress-btn, .download-btn, .copy-button').forEach(element => {                element.classList.toggle('dark-mode');
+            });
+
+            if (document.body.classList.contains('dark-mode')) {
+                themeColorMeta.setAttribute('content', '#121212');
+            } else {
+                themeColorMeta.setAttribute('content', '#f0f0f0');
+            }
+        });
+    });
+</script>
 </body>
 </html>
