--- a/regex.html
+++ b/regex.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="./icons/icon-116x116.webp">
-    <title>连接正则转换</title>
+    <title>转换正则</title>
     <style>
         body {
             font-family: Arial, sans-serif;
